--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,7 @@
-<app-nav></app-nav>
 
-<div style="text-align:center">
-  <h1>Welcome to Latori's Drink App!</h1>
-</div>
 <div class="container">
   <br>
-  <h2>Current Drinks</h2>
+  <h2>Drink Menu</h2>
     <div class="row">
       <div class="col-md-2"></div>
         <div class="col-md-12">
@@ -33,6 +29,3 @@
       </div>
   </div>
 </div>
-
-<router-outlet></router-outlet>
-
